cmake_minimum_required(VERSION 3.12)
project("freq")

find_package(OpenMP)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS ON)

foreach(target IN ITEMS "basic" "pb_ds" "lt" "oaph")
    add_executable("${target}")
    target_sources("${target}" PRIVATE "${target}.cpp" "io.hpp" "timer.hpp" "helpers.hpp")
    target_compile_options("${target}" PRIVATE $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:-march=native>)
    if(target STREQUAL "pb_ds")
        target_compile_options("${target}" PRIVATE $<$<CXX_COMPILER_ID:Clang>:-stdlib=libstdc++>)
        target_link_options("${target}" PRIVATE $<$<CXX_COMPILER_ID:Clang>:-stdlib=libstdc++>)
    else()
        target_compile_options("${target}" PRIVATE $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>)
        target_link_options("${target}" PRIVATE $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>)
    endif()
endforeach()

if(OpenMP_CXX_FOUND)
    target_link_libraries("oaph" PUBLIC OpenMP::OpenMP_CXX)
endif()
